--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
 
-<div id='carousel'></div>
+<div id='carousel'>
+
+<slide class="slide" style="background-image: url(/home/martin/code/TintinDu/ForHonorTeam/app/javascript/src/components/forhonor1.jpg)">
+
+</slide>
+</div>
